# sudoku-simple

./: CMakeLists.txt  README
files/: file.txt  file1.txt  file2.txt  file_daily.txt  file_evil.txt
src/: CMakeLists.txt  matrix_structure.h  sudoku.h  timer.h
trunk/files/: file3.txt
trunk/src/: sudoku.cc  timer.cc
